# app.js
@@ -20,9 +20,9 @@ app.use(express.urlencoded({ extended: false }));
 app.use(cookieParser());
 app.use(express.static(path.join(__dirname, 'public')));
 
-app.use('/', indexRouter);
-app.use('/users', usersRouter);
-app.use('/brands', brandsRouter);
+app.use('/', indexRouter /* #swagger.ignore = true */);
+app.use('/users', usersRouter /* #swagger.tags = ['Users'] */);
+app.use('/brands', brandsRouter /* #swagger.tags = ['Brands'] */);
 
 // catch 404 and forward to error handler
 app.use(function(req, res, next) {
